css/pinchard.css
/*!
 * Start Bootstrap - Pinchard v3.3.7+1 (http://startbootstrap.com/template-overviews/pinchard)
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */

@font-face {
    font-family: 'circular-std';
    src: url('../fonts/CircularStd-Book.otf');
}
@font-face {
    font-family: 'circular-bold';
    src: url('../fonts/CircularStd-Bold.otf');
}
@font-face {
    font-family: 'courier-new';
    src: url('../fonts/cour.ttf');
}

html,
body {
  height: 100%;
  width: 100%;
}
body {
/*  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;*/
/*font-family: 'Helvetica Neue', Arial, sans-serif;*/
    font-family: "circular-std";
}
hr {
  border-color: #F05F40;
  border-width: 3px;
  max-width: 50px;
}
hr.light {
  border-color: white;
}
a {
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
  color: #F05F40;
}
a:hover,
a:focus {
  color: #eb3812;
}
h1,
h2,
h3,
h4,
h5,
h6 {
/*  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;*/
    font-family: "circular-bold";
}
p {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 20px;
}
.bg-primary {
  background-color: #F05F40;
}
.bg-dark {
  background-color: #222222;
  color: white;
}
.text-faded {
  color: rgba(255, 255, 255, 0.7);
}
section {
  padding: 100px 0;
}
aside {
  padding: 50px 0;
}
.no-padding {
  padding: 0;
}
.navbar-default.affix {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1030;
}
.navbar-default {
  background-color: white;
  border-color: #e5e5e5;
  border-bottom: 1px solid #e5e5e5;
  --nav-icon-size: 24px;
  --nav-icon-hit: 24px;
  /*font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;*/
  font-family: "circular-std";
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
  text-align: center;
}
/* Bootstrap 5 .navbar is flex; this site uses absolute-positioned icons + centered title */
.navbar-default.navbar {
  display: block;
  padding: 0;
  --bs-navbar-padding-y: 0;
  --bs-navbar-padding-x: 0;
  min-height: 50px;
}
.navbar-default img {
    display: inline-block;
    max-width: 100%;
    cursor: pointer;
}
.navbar-default .img_left {
    float: left;
}
.navbar-default .img_right {
    float: right;
}
.navbar-default .title {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: 49px;
    padding: 11px 16px;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    font-family: 'circular-bold';
    font-size: 19px;
    font-weight: 700;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    pointer-events: none;
    z-index: 1;
}

.navbar-default .title > a {
    color: rgba(0, 0, 0, .7);
    text-decoration: none;
    pointer-events: auto;
}
.navbar-default .title > a:hover, .navbar-default .title > a:focus {
    color: #F05F40;
}

.navbar-default .title .title-brand {
    grid-column: 2;
    justify-self: center;
}

.navbar-default .nav-photo-prev {
    grid-column: 1;
    justify-self: end;
}

.navbar-default .nav-photo-next {
    grid-column: 3;
    justify-self: start;
}

.navbar-default .nav-photo-prev.is-hidden,
.navbar-default .nav-photo-next.is-hidden {
    visibility: hidden;
    pointer-events: none;
}

.navbar-default .nav-photo-prev,
.navbar-default .nav-photo-next {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: var(--nav-icon-hit);
    height: var(--nav-icon-hit);
}

.navbar-default .title .arrow {
    display: inline-block;
    width: var(--nav-icon-size);
    height: var(--nav-icon-size);
    vertical-align: top;
    border: none;
    background-size: calc(var(--nav-icon-size) * 0.5);
    background-position: center;
    background-repeat: no-repeat;
    cursor: pointer;
    margin-top: 0;
    opacity: .4;
}

.navbar-default .title .arrow:hover {
    opacity: .6;
}

.navbar-default .title .arrow.left {
    margin-right: 16px;
    background-image: url(../images/arrow.svg);
    transform: rotate(90deg);
}

.navbar-default .title .arrow.left:hover {
    background-image: url(../images/arrow_hover.svg);
    transform: rotate(90deg);
}

.navbar-default .title .arrow.right {
    margin-left: 16px;
    background-image: url(../images/arrow.svg);
    transform: rotate(-90deg);
}

.navbar-default .title .arrow.right:hover {
    background-image: url(../images/arrow_hover.svg);
    transform: rotate(-90deg);
}

.navbar-default .nav_cloudberry {
    position: relative;
    left: auto;
    top: auto;
    display: block;
    background: url(../images/icon-cloudberry.svg) no-repeat center;
    background-size: var(--nav-icon-size);
    width: var(--nav-icon-hit);
    height: var(--nav-icon-hit);
    opacity: .6;
    flex-shrink: 0;
}

.navbar-default .nav-left-icons {
    position: absolute;
    left: 16px;
    top: 50%;
    transform: translateY(-50%);
    display: flex;
    align-items: center;
    gap: 12px;
    z-index: 2;
}

.navbar-default .nav_slideshow {
    display: block;
    position: relative;
    background-image: url(../images/icon-slideshow.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: var(--nav-icon-size);
    width: var(--nav-icon-hit);
    height: var(--nav-icon-hit);
    opacity: .6;
    flex-shrink: 0;
}

.navbar-default .nav_slideshow:not(.active):hover,
.navbar-default .nav_slideshow:not(.active):focus {
    background-image: url(../images/icon-slideshow_hover.svg);
    opacity: 1;
}

.navbar-default .nav_slideshow.active,
.navbar-default .nav_slideshow.active:hover,
.navbar-default .nav_slideshow.active:focus {
    background-image: url(../images/icon-slideshow_pause.svg);
    opacity: 1;
}
/* ... */

